<resources>
    <string name="app_name">Wizzenger</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conversations_title">Conversations</string>
    <string name="contacts_title">Contacts</string>
    <string name="param_title">Paramètres</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Courriel</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_password2">Confirmez mdp: </string>
    <string name="prompt_username">Nom d\'usager</string>
    <string name="prompt_phone">Téléphone (opt.) </string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_register">S\'enregistrer</string>
    <string name="error_invalid_email">Ce courriel est invalide</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est invalide</string>
    <string name="error_field_required">Cette entrée est requise</string>

    <!-- Strings related to home page -->
    <string name="conversations_empty">Pas de conversations encore!</string>
    <string name="contacts_empty">Pas de contacts encore!</string>

    <!-- Strings related to fonctionnalities -->
    <string name="contact_text">Contact</string>
    <string name="enter_email">Entrez le courriel du contact: </string>
    <string name="email_test">Courriel: aaaaaaa@hotmail.com</string>
    <string name="phone_test">Téléphone: 514 111 1111</string>
    <string name="add_contact">Ajouter un contact: </string>
    <string name="remove_contact">Retirer un contact: </string>
    <string name="do_not_disturb">Ne pas déranger : </string>
    <string name="send">Envoyer</string>
    <string name="validate">Valider</string>
    <string name="contact_name">Nom du contact</string>
    <string name="choose">Choisir</string>

    <!-- Strings related to dialog fragments -->
    <string name="alert_avatar_title">Choisissez un nouvel avatar</string>
    <string name="alert_close_title">Entrez votre mot de passe pour fermer le compte</string>
    <string name="alert_password_title">Modifier votre mot de passe</string>
    <string name="alert_username_title">Entrez votre nouveau username</string>
    <string name="alert_add_delete_title">Entrez le mot de passe</string>
    <string name="alert_email_title">Modifier votre email</string>

</resources>
